--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
 body {
     margin: 0;
     padding: 0;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     height: 100vh;
     background-color: black;
 }
 h1,h3,p{
     color: white;
-}
-#my-info,#my-name,#know-me {
-    display: none;
 }
