--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
-body {
-    margin: 0;
-    padding: 0;
-    /* display: flex; */
-    justify-content: center;
-    /* align-items: center; */
-    height: 100vh;
-    background-color: black;
+.container {
+    width: 100%;
+    margin: auto;
 }
-h1,h3,p{
-    color: white;
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.text-content {
+    /* max-width: 60%; */
+    flex: 1;
+}
+
+.my-image {
+    width: 100px; /* Adjust as needed */
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
 }
